added the once flag

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 # DEALINGS IN THE SOFTWARE.
 
+test.db
+*.*~
+.*~
+
 *.py[cod]
 
 # C extensions
